@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3141 2019/07/31 15:46:40 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3142 2019/07/31 15:53:04 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5098,3 +5098,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated devel/R-repr to 1.0.1 [brook 2019-07-31]
 	Updated devel/R-rlang to 0.4.0 [brook 2019-07-31]
 	Updated finance/R-TTR to 0.23.4 [brook 2019-07-31]
+	Updated finance/R-quantmod to 0.4.15 [brook 2019-07-31]
